# spruce

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  STYLEGUIDE.md  conanfile.txt  gen-.clang-tidy.sh
core/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  rules.ninja
core/bench/: CMakeLists.txt
core/bench/src/: bufferbench.cpp  main.cpp  mat4fbench.cpp  quaternionbench.cpp  vec2dbench.cpp  vec2fbench.cpp  vec3dbench.cpp  vec3fbench.cpp  vec4fbench.cpp
core/bench/src/math/: mat4fbench.cpp  quaternionbench.cpp  vec2dbench.cpp  vec2fbench.cpp  vec3dbench.cpp  vec3fbench.cpp  vec4fbench.cpp
core/bench/src/memory/: bufferbench.cpp
core/cmake/: CMakeLists.txt.in  spruce.pc.in
core/core/bench/: bench
core/include/: spruce.h
core/src/: SpruceEngine.cpp  SpruceEngine.h  SpruceEngineHandle.cpp  SpruceEngineHandle.h  common.h  log.cpp  log.h  types.h  vec3dbench.s
core/src/app/: API.cpp  API.h  Application.cpp  Application.h  ApplicationFwd.h  app.cpp  app.h
core/src/app/pipeline/: EncodeExecutePipeline.cpp  EncodeExecutePipeline.h  Frame.cpp  Frame.h  FramePipeline.cpp  FramePipeline.h  FramePipelineFwd.h  SimplePipeline.cpp  SimplePipeline.h  encode.cpp  encode.h
core/src/backend/: ApplicationBackend.cpp  ApplicationBackend.h  Window.cpp  Window.h  os.cpp  os.h
core/src/backend/api/: RenderAPI.cpp
core/src/backend/api/batcher/: Batcher.cpp  Batcher.h  FontBatcher.h  ShapeBatcher.cpp
core/src/backend/api/metal/: Metal.h  MetalContext.h  MetalContext.mm  MetalRenderTarget.h  MetalRenderTarget.mm  MetalShader.h  MetalTexture.h  MetalTexture.mm
core/src/backend/api/none/: None.h
core/src/backend/api/opengl/: OpenGL.cpp  OpenGL.h  OpenGLMesh.cpp  OpenGLRenderTarget.h  OpenGLShader.h  (+4 more)
core/src/backend/linux/: X11AppBackend.cpp  X11AppBackend.h  X11RenderSurface.h  X11Window.cpp  X11Window.h  linux.cpp
core/src/backend/mac/: CocoaAppBackend.h  CocoaAppBackend.mm  CocoaWindow.h  CocoaWindow.mm  SpruceView.h  SpruceView.mm  macos.mm  objcpp.h  objcpp.mm
core/src/backend/memory/: MemoryBlockBackend.cpp  MemoryBlockBackend.h  memorymanager.cpp
core/src/backend/task/: FunctionData.cpp  FunctionData.h  FunctionDataTemplate.cpp  FunctionDataTemplate.h  FunctionDataTemplateImpl.h  TaskBackend.cpp  TaskBackend.h  TaskData.cpp  TaskData.h  WorkerThread.cpp  WorkerThread.h  taskmanager.cpp  taskmanager.h
core/src/graphics/: Font.cpp  Font.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Mesh.cpp  Mesh.h  MeshAPIData.cpp  MeshAPIData.h  MeshFwd.h  Primitive.cpp  Primitive.h  RenderPass.h  Shader.cpp  Texture.cpp  Texture.h  TextureAPIData.cpp  TextureAPIData.h  TextureFwd.h  VertexAttribute.cpp  color.cpp  color.h  colorImpl.h  graphics.cpp  graphics.h
core/src/graphics/camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
core/src/graphics/renderer/: Renderer.cpp  Renderer.h  RendererAbstractor.cpp  RendererAbstractor.h  RendererAbstractorFwd.h  RendererFwd.h
core/src/input/: CursorMode.cpp  InputProcessor.cpp  InputProcessor.h  Key.cpp  Key.h  MouseButton.cpp  input.cpp  input.h
core/src/io/: FileHandle.cpp  FileHandle.h  file.cpp  file.h  image.cpp  image.h  io.h  mesh.cpp  mesh.h
core/src/math/: functions.cpp  functions.h  functionsImpl.h  math.cpp  math.h  quaternion.cpp  quaternion.h  quaternionImpl.h  random.cpp  random.h  seed.cpp  seed.h
core/src/math/mat/: mat4f.cpp  mat4f.h  mat4fImpl.h
core/src/math/vec/: vec2d.cpp  vec2d.h  vec2dImpl.h  vec2f.cpp  vec2f.h  vec2fImpl.h  vec2i.cpp  vec2i.h  vec2iImpl.h  vec3d.cpp  vec3d.h  vec3dImpl.h  vec3f.cpp  vec3f.h  vec3fImpl.h  vec3i.cpp  vec3i.h  vec3iImpl.h  vec4f.cpp  vec4f.h  vec4fImpl.h
core/src/memory/: aowner.cpp  aowner.h  aownerImpl.h  buffer.cpp  buffer.h  bufferImpl.h  memory.cpp  memory.h  owner.cpp  owner.h  ownerImpl.h  stackown.cpp  stackown.h  stackownImpl.h  stackpoly.cpp  stackpoly.h  stackpolyImpl.h
core/src/script/: Script.h
core/src/script/lua/: LuaVM.h
core/src/system/: MemoryBlock.h  buffer.cpp  buffer.h  system.cpp  system.h  time.cpp  time.h
core/src/task/: Task.h  TaskConfig.h  TaskConfigImpl.h  TaskGroup.h  TaskGroupImpl.h  TaskImpl.h  TaskPriority.h  async.cpp  async.h  semaphore.cpp  semaphore.h
core/src/util/: Rectangle.cpp  function.cpp  function.h  simd.cpp  simd.h  simdImpl.h
core/src/util/profile/: FrameProfileData.cpp  FrameProfileData.h  ProfileData.cpp  ProfileData.h  TaskProfileData.cpp  profile.h
core/test/: CMakeLists.txt
core/test/src/: FileHandle-test.cpp  buffer-test.cpp  main-test.cpp  mat4f-test.cpp  vec3-ftest.cpp  vec3d-test.cpp  vec3f-test.cpp
core/test/src/graphics/: color-test.cpp
core/test/src/io/: FileHandle-test.cpp
core/test/src/math/: mat4f-test.cpp  vec2x-test.cpp  vec3x-test.cpp
core/test/src/memory/: buffer-test.cpp  stackpoly-test.cpp
test-project/: CMakeLists.txt  meson.build
test-project/assets/: CMakeLists.txt
test-project/assets/basic/: CMakeLists.txt  compile-shader.sh
test-project/assets/basic/default/: default.gl.frag  default.gl.vert  default.metal  default.vk.frag
test-project/assets/bench/: CMakeLists.txt
test-project/assets/bench/default/: default.gl.frag  default.gl.vert  default.vk.frag  default.vk.vert
test-project/assets/bench/post/: post.gl.frag  post.gl.vert  post.metal
test-project/assets/bench/shadow/: shadow.gl.frag  shadow.metal
test-project/assets/cube/: CMakeLists.txt  compile-shader.sh
test-project/assets/cube/default/: default.gl.frag  default.gl.vert  default.metal  default.vk.vert
test-project/assets/cube/post/: post.gl.frag  post.metal  post.vk.frag  post.vk.vert
test-project/assets/cube/shadow/: shadow.gl.vert  shadow.vk.frag  shadow.vk.vert
test-project/src/: SpruceTest.cpp  SpruceTest.h  main.cpp  util.cpp  util.h
test-project/src/scene/: Scene.cpp  Scene.h  info.cpp  info.h
test-project/src/scene/basic/: Basic.cpp  Basic.h
test-project/src/scene/bench/: Bench.cpp  Bench.h
test-project/src/scene/cube/: Cube.cpp  Cube.h
(+459 files in other folders)
